# llm-proposal-composer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_app.py
functions/: extract_text.py
graph/: consts.py  graph.py  state.py
graph/nodes/: concatenate_sections.py  continue.py  continue_generation.py  export.py  extract.py  generate_section.py  generate_structure.py  reorder_delete.py  user_review_section.py  user_review_structure.py
llm/: llm_client.py  prompts.py
